Only use inlined target functions when supported

To support clang-cl builds, until we add the necessary logic to enable
function targets for this case.

Fixes: QTBUG-98253
Change-Id: Ied296babaa85a13321663d50019fad49134f0f44
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit b94e2048610f8ea9dba81ddc2dcf912b33c4d20d)
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>